--- a/config/locales/models/sms_tmp.zh-CN.yml
+++ b/config/locales/models/sms_tmp.zh-CN.yml
@@ -1,13 +1,13 @@
----
+#encoding: utf-8
 zh-CN:
-  active_record:
+  activerecord:
     models:
-      sms_tmp: Sms tmp
+      sms_tmp: 短信模版
     attributes:
       sms_tmp:
-        user: User
-        title: Title
-        content: Content
+        user: 所有者
+        title: 标题
+        content: 内容
     errors:
       sms_tmp: 
   helpers:
