Add site comemnts

--- a/config/locales/models/site.zh-CN.yml
+++ b/config/locales/models/site.zh-CN.yml
@@ -14,6 +14,7 @@ zh-CN:
         header: 页头
         body: 内容
         footer: 页脚
+        is_published: 是否发布
     errors:
       site: 
   helpers:
